--- a/countschool/.classpath
+++ b/countschool/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="lib/shineware-common-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/shineware-ds-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/komoran-2.4-e.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
